feat: implement mapper for AchatMaterielAuComptant
